# RemeetAI

./: .gitignore  requirements.txt  summary_lsa.txt  summary_txt_rank.txt
media_transcript_remeetai/: README.md  pyproject.toml
media_transcript_remeetai/src/media_transcript_remeetai/: process_media.py
media_transcript_remeetai/src/media_transcript_remeetai/clean_text/: clean_duplicate.py  extract_topic.py  preprocess.py
media_transcript_remeetai/src/media_transcript_remeetai/stt/: whisper_stt.py  whisper_test.py
media_transcript_remeetai/src/media_transcript_remeetai/text_summarization/: bart_summarization.py  lexrank_summarization.py  textrank_lsa.py
media_transcript_remeetai/src/media_transcript_remeetai/utils/: extract_audio.py
src/: docker-compose.yml
src/server/: Dockerfile  server.py
src/server/template/: serveur.py
src/server/templates/: home.html
src/stt/: whisper.py
src/text_summarization/: Pipfile  TextRank_LSA.ipynb  bart_clean.py  rouge_metric.py  text_summarization.ipynb  textrank_lsa.py
src/utils/: extract_audio.py
template/: serveur.py
template/staticFiles/: main.css
template/staticFiles/Image/: andy.jfif  lorenzo.jfif
template/templates/: aboutus.html  documentation.html  home.html
text_summarization/: Bart_summarization.ipynb  LexRank.ipynb  Pipfile  bart_clean.py  text_summarization.ipynb  textrank_lsa.py
text_summarization/dataset/aws_gold_summaries/: AWS - 1 (trimmed) - gold_summary.txt  AWS - 1 (trimmed)2 - lexrank_remeetai.txt  AWS - 1 (trimmed)2 - summarizen.com.txt  AWS - 1 (trimmed)3 - gold_summary.txt
(+20 files in other folders)
